--- a/src/main/resources/webapp/index.xhtml
+++ b/src/main/resources/webapp/index.xhtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:f="http://java.sun.com/jsf/core"
-	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:ui="http://java.sun.com/jsf/facelets"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	  xmlns:p="http://primefaces.org/ui">
 
 <f:view locale="en" contentType="text/html">
@@ -25,36 +25,45 @@
 					               <!--For hiding scroll-->
 					<p:toolbar style="overflow:hidden !important">
 						<f:facet name="left">
-							<p:commandButton type="button" value="Start service" icon="ui-icon-start" />
+							<p:commandButton value="Start service" icon="ui-icon-start" />
 						</f:facet>
-
 						<f:facet name="right">
 							<p:commandButton value="Stop service" actionListener="#{serverController.stopService}" ajax="false" icon="ui-icon-close" />
 						</f:facet>
-
 					</p:toolbar>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="south" size="100" header="Logs" resizable="true" closable="false" collapsible="true">
-
 					<h:outputText id="logs" value="There will be logs!"  widgetVar="logConsole" />
-
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" style="min-width:350px;" header="Camera" resizable="true" closable="false" collapsible="true">
-					<h:form>
+					<h:form id="camform">
 						<h:panelGrid columns="1" cellpadding="5">
-							<p:photoCam widgetVar="pc" listener="#{serverController.onCapture}" />
+							<h:form id="cam" >
+								<!--<p:photoCam widgetVar="pc" listener="#{serverController.onCapture}" />-->
+								<p:graphicImage value="#{camController.content}" />
+							</h:form>
+						</h:panelGrid>
+						<h:panelGrid columns="2" cellpadding="5">
+							<p:outputLabel for="cams" value="Available cameras: " />
+							<p:selectOneListbox id="cams" value="#{camController.webcams}">
+								<f:selectItems value="#{camController.webcams}" var="webcam" itemLabel="#{webcam.name}"/>
+							</p:selectOneListbox>
 						</h:panelGrid>
 						<h:panelGrid columns="2" cellpadding="5">
 							<h:column>
-								<p:commandButton type="button" value="Capture" onclick="PF('pc').capture()"/>
+								<p:commandButton value="Start" actionListener="#{camController.start}" ajax="true" async="true"/>
 							</h:column>
 							<h:column>
-								<p:commandButton value="Deactivate" onclick="PF('pc').deactivate()"/>
+								<p:commandButton value="Stop" actionListener="#{camController.stop}" ajax="true" async="true"/>
 							</h:column>
 						</h:panelGrid>
 					</h:form>
+					<!--Push !!!!!!!-->
+					<p:socket channel="/updateCam">
+						<p:ajax event="message" update="camform:cam"/>
+					</p:socket>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="east" size="200" header="Cpu" resizable="true" closable="false" collapsible="true" >
