--- a/src/main/resources/webapp/index.xhtml
+++ b/src/main/resources/webapp/index.xhtml
@@ -38,13 +38,10 @@
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" style="min-width:350px;" header="Camera" resizable="true" closable="false" collapsible="true">
-					<h:form>
+					<h:form >
 						<h:panelGrid columns="1" cellpadding="5">
-
-							<h:form id="camform">
-								<h:form id="cam">
-									<p:graphicImage value="#{camController.content}" cache="false" />
-								</h:form>
+							<h:form id="camform" >
+								<p:graphicImage id="cam" value="#{camController.content}" style="width: 300px; height: 240px" cache="false"/>
 							</h:form>
 							<!--Push !!!!!!!-->
 							<p:socket channel="/updateCam">
@@ -54,7 +51,7 @@
 						<h:panelGrid columns="2" cellpadding="5">
 							<p:outputLabel for="cams" value="Available cameras: " />
 							<p:selectOneListbox id="cams" values="#{camController.getWebcams}">
-								<!--<f:selectItems value="#{camController.getWebcams}" var="webcam" itemLabel="#{webcam.name}"/>-->
+								<!--<f:selectItems values="#{camController.getWebcams}" var="webcam" itemLabel="#{webcam.name}"/>-->
 							</p:selectOneListbox>
 						</h:panelGrid>
 						<h:panelGrid columns="2" cellpadding="5">
@@ -69,8 +66,9 @@
 						<br />
 						<h:panelGrid columns="2" cellpadding="5" style="margin-left: 20px">
 							<h:column >
-								<p:outputLabel id="camtime" value="#{camController.updateTime}" />
-								<p:slider for="camtime" type="vertical" display="camtime"/>
+								<p:outputLabel id="camtimeOut"  />
+								<h:inputHidden id="camtime" value="#{camController.updateTime}" />
+								<p:slider for="camtime" type="vertical" display="camtimeOut" maxValue="10"/>
 							</h:column>
 							<h:column>
 								<!--<p:slider  type="vertical" />-->
@@ -79,7 +77,7 @@
 					</h:form>
 				</p:layoutUnit>
 
-				<p:layoutUnit position="east" size="20%" header="Cpu" resizable="true" closable="false" collapsible="true" >
+				<p:layoutUnit position="east" size="25%" header="Cpu" resizable="true" closable="false" collapsible="true" >
 					<p:growl id="growl" life="2000" />
 					<h:panelGrid columns="2" cellpadding="5">
 						<h:outputLabel value="IP:" />
@@ -114,7 +112,12 @@
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center" header="Chart">
-					<p:chart type="bar" model="#{serverController.model}" style="height:300px"/>
+					<h:form id="chartform">
+						<p:chart id="chartbar" type="bar" model="#{serverController.model}" style="height:300px" />
+					</h:form>
+					<p:socket channel="/updateCam">
+						<p:ajax event="message" update="chartform:chartbar"/>
+					</p:socket>
 				</p:layoutUnit>
 
 			</p:layout>
